fixed some layout bugs

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 
 h1 {
     font-family: 'BoldFont';
+    font-size: 45px;
 }
 
 p {
@@ -32,7 +33,7 @@ body {
 .container {
     display: flex;
     flex-direction: row;
-    height: 600px;
+    height: 100vh;
 }
 
 .left {
@@ -40,7 +41,7 @@ body {
     image-rendering: optimizeQuality;
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 24%;
+    width: 35%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -48,11 +49,11 @@ body {
 }
 
 .logo {
-    background-color: #387d946c;
+    background-color: #2053656c;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 90px;
+    height: 120px;
     width: 100%;
     margin-top: 30px;
     padding: 5px;
@@ -62,24 +63,24 @@ body {
 
 .right {
     background-color: #8dc2dd;
-    width: 76%;
+    width: 75%;
     height: 100%;
     padding-left: 20px;
     padding-top: 50px;
 }
 
 .icon {
-    width: 60px;
-    height: 60px;
-    margin-top: 10px;
+    width: 70px;
+    height: 70px;
+    margin-top: 20px;
 }
 
 .form-container {
     background-color: #a3daf5;
     display: flex;
-    flex-direction: column;
+    flex-flow: column nowrap;
     margin-left: -20px;
-    height: 300px;
+    height: 350px;
     padding: 40px;
     box-shadow: 2px 2px 4px #30303019;
 }
